# AffectiveTravelogue

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_openapi.py  main.py  nohup.out  openapi.yaml  pyproject.toml  runTests.sh  system_prompt.txt  tests.hurl
backend/api/: evaluate.py  generate.py  routes.py  waypoints.py
backend/models/: evaluation.py  route.py  waypoint.py
backend/notebooks/: analysis_all.ipynb  analysis_meta_fewshot.ipynb  analysis_zeroshot.ipynb  vader_sentiment_analysis.ipynb
backend/services/: eval_service.py  neo4j_service.py  rag_service.py
backend/tests/: conftest.py  test_eval_service.py  test_neo4j_service.py  test_rag_service.py
backend/utils/: config.py  elevation_client.py  logger.py  osm_client.py
certs/: README.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: client.ts  services.ts  types.ts
frontend/src/components/: AppLayout.vue  ObservationDialog.vue  ProfileDialog.vue
frontend/src/stores/: profile.ts  route.ts  sync.ts
frontend/src/types/: index.ts
frontend/src/utils/: hashUtils.ts  useTimer.ts
frontend/src/views/: EvaluationView.vue  Home.vue  Journal.vue  RouteStudio.vue  TravelogueView.vue
