[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bert-score>=0.3.13",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.3",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
    "vadersentiment>=3.3.2",
    "httpx>=0.28.1",
]
